Update LinkedListPractice.java